<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/pass_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/picture_title_description"
        app:srcCompat="@drawable/pass" />

    <TextView
        android:id="@+id/pass_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:lineSpacingExtra="8dp"
        android:text="@string/pass_title_text"
        android:textAlignment="center"
        android:textColor="@color/colorPassBorder"
        android:textSize="36dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <TextView
    android:id="@+id/pass_content1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="casual"
    android:lineSpacingExtra="8dp"
    android:text="@string/pass_content_text1"
    android:textAlignment="center"
    android:textColor="@color/colorPassBorder"
    android:textSize="20dp"
    android:textStyle="bold" />

    <TextView
        android:id="@+id/pass_content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:lineSpacingExtra="8dp"
        android:text="@string/pass_content_text2"
        android:textAlignment="center"
        android:textColor="@color/colorPassBorder"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="0dp"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pass_background"
            android:text="@string/button_cancel_text"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pass_background"
            android:text="@string/button_next_text"
            android:layout_marginLeft="20dp" />
    </LinearLayout>


</LinearLayout>